<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ECEFF1">

    <Button
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_button"
        android:layout_above="@+id/scores_button"
        android:layout_alignLeft="@+id/scores_button"
        android:layout_alignStart="@+id/scores_button"
        android:layout_alignRight="@+id/scores_button"
        android:layout_alignEnd="@+id/scores_button"
        style="@style/buttonStyle"
        android:onClick="showToastSpotify"
       />

    <Button
        android:text="@string/scores_app"
        android:id="@+id/scores_button"
        android:layout_above="@+id/library_button"
        android:layout_alignLeft="@+id/library_button"
        android:layout_alignStart="@+id/library_button"
        android:layout_alignRight="@+id/library_button"
        android:layout_alignEnd="@+id/library_button"
        style="@style/buttonStyle"
        android:onClick="showToastScores"
        />

    <Button
        android:text="@string/library_app"
        android:id="@+id/library_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/build_button"
        android:layout_alignStart="@+id/build_button"
        android:layout_alignRight="@+id/build_button"
        android:layout_alignEnd="@+id/build_button"
        style="@style/buttonStyle"
        android:onClick="showToastLibrary"
        />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/build_it"
        android:id="@+id/build_button"
        android:layout_below="@+id/library_button"
        android:layout_alignLeft="@+id/xyz_button"
        android:layout_alignStart="@+id/xyz_button"
        android:layout_alignRight="@+id/xyz_button"
        android:layout_alignEnd="@+id/xyz_button"
        style="@style/buttonStyle"
        android:onClick="showToastBuild"
        />

    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_button"
        android:layout_below="@+id/build_button"
        android:layout_alignLeft="@+id/capstone_button"
        android:layout_alignStart="@+id/capstone_button"
        android:layout_alignRight="@+id/capstone_button"
        android:layout_alignEnd="@+id/capstone_button"
        style="@style/buttonStyle"
        android:onClick="showToastXyz"
        />

    <Button
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/xyz_button"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        android:onClick="showToastCapstone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanodegree_apps"
        android:id="@+id/textView"
        android:textColor="#37474F"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_above="@+id/spotify_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
